# discrepancy-finder

./: .gitignore  README.md  pyproject.toml
src/discrepancy_finder/: __main__.py  handlers.py  parser.py  settings.py  validator.py
src/discrepancy_finder/models/: base.py  discrepancy.py  document.py  repositories.py
