[project]
name = "discrepancy-finder"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aliaksandr Valshtein",email = "alexvolshtein@gmail.com"},
]
dependencies = [
    "pymongo>=4.6.3",
    "pydantic>=2.6.4",
    "pydantic-mongo>=2.1.2",
    "pydantic-extra-types>=2.6.0",
    "pycountry>=23.12.11",
    "pydantic-settings>=2.2.1",
    "typing-extensions>=4.10.0",
    "beautifulsoup4>=4.12.3",
    "loguru>=0.7.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Commercial"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
